--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,3 +17,27 @@
 .container-fluid {
     overflow: hidden;
 }
+
+.container-fluid {
+    padding: 0 15px;
+}
+
+.card {
+    max-width: 100%;
+}
+
+.form-control {
+    width: 100%;
+}
+
+.text-center h1 {
+    font-size: 1.5rem;
+}
+
+.btn-user {
+    width: 100%;
+}
+
+.row {
+    margin: 0;
+}
